# quark

./: .gitignore  Cargo.toml  a.ps1  build.bat  build.rs
.cargo/: config
src/: antidebug.rs  editions.rs  imp.rs  main.rs  v_strings.rs
static_vcruntime/src/: lib.rs
